--- a/source/VSTSExtensions/OctopusBuildAndReleaseTasks/extension-manifest.production.json
+++ b/source/VSTSExtensions/OctopusBuildAndReleaseTasks/extension-manifest.production.json
@@ -1,6 +1,6 @@
 {
     "id": "octopus-deploy-build-release-tasks",
-    "name": "Octopus Deploy Build and Release Tasks",
+    "name": "Octopus Deploy Integration",
     "version": "set-by-pack.ps1",
     "publisher": "octopusdeploy",
     "public": true,
