Updated scopes and debugging

--- a/source/VSTSExtensions/extension-manifest.json
+++ b/source/VSTSExtensions/extension-manifest.json
@@ -71,7 +71,8 @@
     ],
     "scopes": [
         "vso.build",
-        "vso.build_execute"
+        "vso.build_execute",
+        "vso.serviceendpoint_query"
     ],
     "demands": ["contribution/ms.vss-dashboards-web.widget-sdk-version-2"],
     "contributions": [
