Added new service endpoint query scope

--- a/source/VSTSExtensions/extension-manifest.json
+++ b/source/VSTSExtensions/extension-manifest.json
@@ -63,7 +63,8 @@
     ],
     "scopes": [
         "vso.build",
-        "vso.build_execute"
+        "vso.build_execute",
+        "vso.serviceendpoint_query"
     ],
     "contributions": [
         {
