--- a/source/VSTSExtensions/extension-manifest.json
+++ b/source/VSTSExtensions/extension-manifest.json
@@ -165,6 +165,16 @@
             }
         },
         {
+            "id": "octo-installer",
+            "type": "ms.vss-distributed-task.task",
+            "targets": [
+                "ms.vss-distributed-task.tasks"
+            ],
+            "properties":{
+                "name": "OctopusBuildAndReleaseTasks/Tasks/OctoInstaller"
+            }
+        },
+        {
             "id": "octopus-promote",
             "type": "ms.vss-distributed-task.task",
             "targets": [
