--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/glob": "^5.0.35",
     "@types/gulp": "^4.0.5",
     "@types/node": "^6.0.111",
+    "@types/ramda": "^0.25.29",
     "ava": "^0.22.0",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
@@ -28,6 +29,8 @@
     "typescript": "^2.8.3"
   },
   "dependencies": {
+    "monet": "^0.8.10",
+    "ramda": "^0.25.0",
     "typed-rest-client": "^1.0.7",
     "vsts-task-lib": "^2.4.0",
     "vsts-task-tool-lib": "^0.8.1"
