--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "declaration": true,
+    "declaration": false,
     "sourceMap": false,
     "strict": true,
     "noUnusedLocals": true,
