--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "monet": "^0.8.10",
     "ramda": "^0.25.0",
     "typed-rest-client": "^1.0.7",
+    "uuid": "^3.2.1",
+    "vso-node-api": "^6.5.0",
     "vsts-task-lib": "^2.4.0",
     "vsts-task-tool-lib": "^0.8.1"
   }
