--- a/tests/OctoTFS.Tests/OctoTFS.Tests/packages.config
+++ b/tests/OctoTFS.Tests/OctoTFS.Tests/packages.config
@@ -3,5 +3,6 @@
   <package id="ApprovalTests" version="3.0.11" targetFramework="net452" />
   <package id="ApprovalUtilities" version="3.0.11" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
-  <package id="NUnit" version="2.6.4" targetFramework="net452" />
+  <package id="NUnit" version="3.10.1" targetFramework="net452" />
+  <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net452" />
 </packages>
