--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^6.0.111",
     "@types/ramda": "^0.25.29",
     "@types/uuid": "^3.4.3",
+    "@types/webpack": "^4.4.0",
     "ava": "^0.22.0",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
@@ -21,22 +22,22 @@
     "gulp-run-command": "0.0.9",
     "require-dir": "^1.0.0",
     "rimraf": "^2.6.2",
-    "rollup": "^0.59.1",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-copy-glob": "^0.1.1",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-typescript": "^0.8.1",
-    "rollup-plugin-typescript2": "^0.14.0",
     "run-sequence": "^2.2.1",
-    "typescript": "^2.8.3"
+    "ts-loader": "^4.3.1",
+    "ts-node": "^6.1.0",
+    "tsconfig-paths": "^3.3.2",
+    "typescript": "^2.8.3",
+    "webpack": "^4.10.2",
+    "webpack-command": "^0.2.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "fp-ts": "^1.6.0",
-    "monet": "^0.8.10",
     "ramda": "^0.25.0",
     "typed-rest-client": "^1.0.7",
     "uuid": "^3.2.1",
     "vso-node-api": "^6.5.0",
+    "vss-web-extension-sdk": "^5.134.0",
     "vsts-task-lib": "^2.4.0",
     "vsts-task-tool-lib": "^0.8.1"
   }
