--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "test": "lerna run test",
+    "test": "jest",
     "build": "gulp build",
     "build:rollup": "rollup --config rollup.config.js",
     "clean": "rimraf packages/**/lib"
@@ -10,19 +10,20 @@
   "devDependencies": {
     "@types/glob": "^5.0.35",
     "@types/gulp": "^4.0.5",
+    "@types/jest": "^23.0.0",
     "@types/node": "^6.0.111",
     "@types/ramda": "^0.25.29",
     "@types/uuid": "^3.4.3",
     "@types/webpack": "^4.4.0",
-    "ava": "^0.22.0",
-    "glob": "^7.1.2",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "gulp-copy": "^1.1.0",
     "gulp-run-command": "0.0.9",
+    "jest": "^23.1.0",
     "require-dir": "^1.0.0",
     "rimraf": "^2.6.2",
     "run-sequence": "^2.2.1",
+    "ts-jest": "^22.4.6",
     "ts-loader": "^4.3.1",
     "ts-node": "^6.1.0",
     "tsconfig-paths": "^3.3.2",
@@ -33,12 +34,28 @@
   },
   "dependencies": {
     "fp-ts": "^1.6.0",
+    "glob": "^7.1.2",
     "ramda": "^0.25.0",
+    "ts-promise": "^2.0.0",
     "typed-rest-client": "^1.0.7",
     "uuid": "^3.2.1",
     "vso-node-api": "^6.5.0",
     "vss-web-extension-sdk": "^5.134.0",
     "vsts-task-lib": "^2.4.0",
     "vsts-task-tool-lib": "^0.8.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
