Updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,7 @@ _ReSharper*
 *.ncrunch*
 .*crunch*.local.xml
 
-# Installshield output folder 
+# Installshield output folder
 [Ee]xpress
 
 # DocProject is a documentation generator add-in
@@ -102,7 +102,7 @@ ClientBin
 ~$*
 *.dbmdl
 Generated_Code #added for RIA/Silverlight projects
-*.swp 
+*.swp
 .idea
 
 # Backup & report files from converting an old project file to a newer
@@ -112,6 +112,8 @@ Backup*/
 UpgradeLog*.XML
 
 build/
+dist/
+.rpt2_cache/
 
 *.received.*
 *.DS_Store
