--- a/source/extension-manifest.json
+++ b/source/extension-manifest.json
@@ -78,7 +78,7 @@
         "vso.build_execute",
         "vso.serviceendpoint_query"
     ],
-    "demands": ["contribution/ms.vss-dashboards-web.widget-sdk-version-2"],
+    "demands": [],
     "contributions": [
         {
             "id": "OctoProjectEnvironmentWidget",
