--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "ts-promise": "^2.0.0",
     "typed-rest-client": "^1.0.7",
     "uuid": "^3.2.1",
-    "vso-node-api": "^6.5.0",
+    "azure-devops-node-api": "^6.6.0",
     "vss-web-extension-sdk": "^5.140.0",
     "vsts-task-lib": "^2.6.1",
     "vsts-task-tool-lib": "^0.10.0"
