Updated docs link in the extension manifest

--- a/source/extension-manifest.json
+++ b/source/extension-manifest.json
@@ -51,7 +51,7 @@
             "uri": "https://octopus.com"
         },
         "getstarted": {
-            "uri": "https://octopus.com/docs/guides/use-the-team-foundation-build-custom-task"
+            "uri": "https://g.octopushq.com/TFS-VSTS"
         },
         "support": {
             "uri": "https://octopus.com/support"
