--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "typescript": "^2.8.3",
     "webpack": "^4.10.2",
     "webpack-command": "^0.2.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "yargs": "^12.0.5"
   },
   "dependencies": {
     "fp-ts": "^1.6.0",
