--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "private": true,
+  "engines" : {
+    "node" : ">=10.0.0",
+    "npm" : ">=6.0.0"
+  },
   "scripts": {
     "test": "jest",
     "build": "gulp build",
