--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
   "private": true,
-  "engines" : {
-    "node" : ">=10.0.0",
-    "npm" : ">=6.0.0"
-  },
   "scripts": {
     "test": "jest",
     "build": "gulp build",
@@ -20,6 +16,7 @@
     "gulp": "4.0.0",
     "gulp-clean": "0.4.0",
     "gulp-copy": "4.0.1",
+    "gulp-debug": "^4.0.0",
     "jest": "23.1.0",
     "require-dir": "1.0.0",
     "rimraf": "2.6.2",
