--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "yargs": "^12.0.5"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
+    "merge": "^1.2.1",
     "fp-ts": "^1.6.0",
     "glob": "^7.1.2",
     "ramda": "^0.25.0",
