--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "uuid": "^3.2.1",
     "azure-devops-node-api": "^6.6.0",
     "vss-web-extension-sdk": "^5.140.0",
-    "vsts-task-lib": "^2.6.1",
-    "vsts-task-tool-lib": "^0.10.0"
+    "azure-pipelines-task-lib": "^2.7.7",
+    "azure-pipelines-tool-lib": "^0.11.0"
   },
   "jest": {
     "transform": {
