add push-metadata task. No spaces support yet.

--- a/source/extension-manifest.json
+++ b/source/extension-manifest.json
@@ -161,6 +161,16 @@
             }
         },
         {
+            "id": "octopus-metadata",
+            "type": "ms.vss-distributed-task.task",
+            "targets": [
+                "ms.vss-distributed-task.tasks"
+            ],
+            "properties": {
+                "name": "tasks/Metadata"
+            }
+        },
+        {
             "id": "octo-installer",
             "type": "ms.vss-distributed-task.task",
             "targets": [
