--- a/source/extension-manifest.json
+++ b/source/extension-manifest.json
@@ -167,7 +167,7 @@
                 "ms.vss-distributed-task.tasks"
             ],
             "properties": {
-                "name": "tasks/Metadata"
+                "name": "tasks/BuildInformation"
             }
         },
         {
