Support large-scale instances in our project selectors (#183)
* Adding prettier and formatting the configuration widget

* Removing unnecessary comments (code already reads well) and formatting/cleanup

* Formatting as per the new prettier file

* Adding project group selectors to all-the-things

* Updating data sources to use the project group selector

* Handling onChange event for projectGroup

* Progress on using our project list endpoints for lookups by name

* Attempting to address our Items collection for list endpointsg

* Removing unnecessary overrides for resultSelectorsgs

* Possible fix for query parametersgs

* Fixes to get paging supported

* Passing an empty string through when necessary so we list the top 30 projects by default

* Usability review to name sure names and labels are helpful

* Fix for null checking issue

* Using the project filter by default selection

* Adding TODOs for later review

* Adding TODO for later review

* Updating approval files - this new ProjectFilter is expected input

--- a/source/extension-manifest.json
+++ b/source/extension-manifest.json
@@ -207,14 +207,14 @@
                         "resultSelector": "jsonpath:$.[*]"
                     },
                     {
-                        "name": "OctopusAllProjects",
-                        "endpointUrl": "$(endpoint.url)/api/projects/all",
-                        "resultSelector": "jsonpath:$.[*]"
+                        "name": "OctopusListProjects",
+                        "endpointUrl": "$(endpoint.url)/api/projects?partialName=$(PartialNameFilter)",
+                        "resultSelector": "jsonpath:$.Items[*]"
                     },
                     {
-                        "name": "OctopusAllProjectsInSpace",
-                        "endpointUrl": "$(endpoint.url)/api/$(SpaceId)/projects/all",
-                        "resultSelector": "jsonpath:$.[*]"
+                        "name": "OctopusListProjectsInSpace",
+                        "endpointUrl": "$(endpoint.url)/api/$(SpaceId)/projects?partialName=$(PartialNameFilter)",
+                        "resultSelector": "jsonpath:$.Items[*]"
                     },
                     {
                         "name": "OctopusAllEnvironments",
