Adding project group support (#184)
* Switching to use project groups for a more cohesive UX for both small and scale customers

* Fix for data source name

* Grr, adding missing slash

--- a/source/extension-manifest.json
+++ b/source/extension-manifest.json
@@ -207,13 +207,23 @@
                         "resultSelector": "jsonpath:$.[*]"
                     },
                     {
-                        "name": "OctopusListProjects",
-                        "endpointUrl": "$(endpoint.url)/api/projects?partialName=$(PartialNameFilter)",
+                        "name": "OctopusAllProjectGroups",
+                        "endpointUrl": "$(endpoint.url)/api/projectgroups/all",
+                        "resultSelector": "jsonpath:$.[*]"
+                    },
+                    {
+                        "name": "OctopusAllProjectGroupsInSpace",
+                        "endpointUrl": "$(endpoint.url)/api/$(SpaceId)/projectgroups/all",
+                        "resultSelector": "jsonpath:$.[*]"
+                    },
+                    {
+                        "name": "OctopusListProjectsInProjectGroup",
+                        "endpointUrl": "$(endpoint.url)/api/projectgroups/$(ProjectGroupId)/projects?take=500",
                         "resultSelector": "jsonpath:$.Items[*]"
                     },
                     {
-                        "name": "OctopusListProjectsInSpace",
-                        "endpointUrl": "$(endpoint.url)/api/$(SpaceId)/projects?partialName=$(PartialNameFilter)",
+                        "name": "OctopusListProjectsInProjectGroupInSpace",
+                        "endpointUrl": "$(endpoint.url)/api/$(SpaceId)/projectgroups/$(ProjectGroupId)/projects?take=500",
                         "resultSelector": "jsonpath:$.Items[*]"
                     },
                     {
