feat: added entries for license and privacy policy

--- a/source/extension-manifest.json
+++ b/source/extension-manifest.json
@@ -53,11 +53,17 @@
         "getstarted": {
             "uri": "https://g.octopushq.com/TFS-VSTS"
         },
+        "license": {
+            "uri": "https://octopus.com/legal/customer-agreement"
+        },
         "support": {
             "uri": "https://octopus.com/support"
         },
         "repository": {
             "uri": "https://github.com/OctopusDeploy/OctoTFS"
+        },
+        "privacypolicy": {
+            "uri": "https://octopus.com/legal/privacy"
         }
     },
     "files": [
