Updating a few dependencies to get ready to update to Node 10 (#206)
* We need to inherit the parent environment variables

* Updating some packages

* Fix invalid required

* Api was changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "moduleResolution": "node",
     "baseUrl": "./source",
     "allowSyntheticDefaultImports": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "useUnknownInCatchVariables": false,
     "lib": [
       "es2015"
     ]
