--- a/package.json
+++ b/package.json
@@ -2,21 +2,19 @@
   "private": true,
   "scripts": {
     "test": "jest",
-    "build": "gulp build",
+    "build": "webpack",
     "clean": "rimraf packages/**/lib"
   },
   "devDependencies": {
+    "@tsconfig/node10": "^1.0.8",
     "@types/glob": "7.2.0",
-    "@types/gulp": "4.0.5",
     "@types/jest": "24.0.15",
-    "@types/node": "6.0.111",
+    "@types/node": "^6.0.111",
     "@types/ramda": "0.27.64",
     "@types/uuid": "8.3.4",
-    "@types/webpack": "4.4.35",
+    "@types/webpack": "^5.28.0",
+    "copy-webpack-plugin": "^10.2.4",
     "extend": "3.0.2",
-    "gulp": "4.0.0",
-    "gulp-clean": "0.4.0",
-    "gulp-copy": "4.0.1",
     "jest": "24.8.0",
     "lodash": "4.17.15",
     "merge": "1.2.1",
@@ -24,18 +22,16 @@
     "require-dir": "1.0.0",
     "rimraf": "2.6.2",
     "ts-jest": "24.0.2",
-    "ts-loader": "6.0.4",
-    "ts-node": "8.3.0",
-    "tsconfig-paths": "3.8.0",
-    "typescript": "4.5.5",
-    "webpack": "4.36.1",
-    "webpack-command": "0.4.2",
-    "webpack-node-externals": "1.7.2",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^8.3.0",
+    "typescript": "^4.6.2",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
     "yargs": "17.3.1"
   },
   "dependencies": {
-    "azure-devops-node-api": "11.1.0",
-    "azure-pipelines-task-lib": "3.1.10",
+    "azure-devops-node-api": "11.1.1",
+    "azure-pipelines-task-lib": "3.2.0",
     "azure-pipelines-tool-lib": "0.13.3",
     "fp-ts": "1.19.5",
     "glob": "7.2.0",
@@ -44,19 +40,5 @@
     "typed-rest-client": "1.8.6",
     "uuid": "8.3.2",
     "vss-web-extension-sdk": "5.141.0"
-  },
-  "jest": {
-    "transform": {
-      ".+\\.tsx?$": "ts-jest"
-    },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
   }
 }
