--- a/package.json
+++ b/package.json
@@ -14,20 +14,14 @@
     "@types/uuid": "8.3.4",
     "@types/webpack": "^5.28.0",
     "copy-webpack-plugin": "^10.2.4",
-    "extend": "3.0.2",
     "jest": "24.8.0",
-    "lodash": "4.17.15",
-    "merge": "1.2.1",
-    "natives": "1.1.6",
-    "require-dir": "1.0.0",
     "rimraf": "2.6.2",
     "ts-jest": "24.0.2",
     "ts-loader": "^9.2.6",
     "ts-node": "^8.3.0",
     "typescript": "^4.6.2",
     "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2",
-    "yargs": "17.3.1"
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "azure-devops-node-api": "11.1.1",
@@ -36,7 +30,6 @@
     "fp-ts": "1.19.5",
     "glob": "7.2.0",
     "ramda": "0.28.0",
-    "ts-promise": "2.2.0",
     "typed-rest-client": "1.8.6",
     "uuid": "8.3.2",
     "vss-web-extension-sdk": "5.141.0"
