Move to esbuild

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "strictNullChecks": false,
     "noImplicitAny": false,
     "useUnknownInCatchVariables": false,
+    "isolatedModules": true,
   }
 }
