--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "test": "jest",
     "build": "webpack",
+    "build2": "tsc --noEmit && node esbuild.mjs",
     "clean": "rimraf packages/**/lib"
   },
   "devDependencies": {
@@ -12,16 +13,14 @@
     "@types/node": "^6.0.111",
     "@types/ramda": "0.27.64",
     "@types/uuid": "8.3.4",
-    "@types/webpack": "^5.28.0",
-    "copy-webpack-plugin": "^10.2.4",
+    "esbuild": "^0.14.23",
+    "esbuild-clean-plugin": "^1.0.0",
+    "esbuild-plugin-copy": "^0.4.0",
     "jest": "24.8.0",
     "rimraf": "2.6.2",
     "ts-jest": "24.0.2",
-    "ts-loader": "^9.2.6",
     "ts-node": "^8.3.0",
-    "typescript": "^4.6.2",
-    "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2"
+    "typescript": "^4.6.2"
   },
   "dependencies": {
     "azure-devops-node-api": "11.1.1",
