--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/node": "^6.0.111",
         "@types/ramda": "0.27.64",
         "@types/uuid": "8.3.4",
+        "@types/yargs": "^17.0.9",
         "@typescript-eslint/eslint-plugin": "^5.13.0",
         "@typescript-eslint/parser": "^5.13.0",
         "esbuild": "^0.14.23",
@@ -26,7 +27,8 @@
         "rimraf": "2.6.2",
         "ts-jest": "24.0.2",
         "ts-node": "^8.3.0",
-        "typescript": "^4.6.2"
+        "typescript": "^4.6.2",
+        "yargs": "^17.3.1"
     },
     "dependencies": {
         "azure-devops-node-api": "11.1.1",
