--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "@typescript-eslint/parser": "^5.13.0",
         "esbuild": "^0.14.23",
         "esbuild-clean-plugin": "^1.0.0",
-        "esbuild-plugin-copy": "^0.4.0",
+        "esbuild-copy-static-files": "^0.1.0",
+        "esbuild-plugin-node-externals": "^0.2.0",
         "eslint": "^8.10.0",
         "eslint-config-prettier": "^8.4.0",
         "eslint-plugin-prettier": "^4.0.0",
