--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,27 +29,22 @@ jobs:
         run: |
           npm install
           npm run build -- --extensionVersion $OCTOPUS_VERSION
-
       - name: Replace versions in tasks and create vsix
         run: |
           pwsh ./pack.ps1 -environment $OCTOPUS_ENVIRONMENT -version $OCTOPUS_VERSION
-
       - name: Create Package
         run: |
           tar -czf OctoTFS.vsix.$OCTOPUS_VERSION.tar.gz ./dist/Artifacts/$OCTOPUS_ENVIRONMENT/*.vsix
-
       - name: Push Package
-        uses: burtonr/octopus-cli-action@7.4.4
         env:
           OCTOPUS_CLI_SERVER: ${{ secrets.OCTOPUS_URL }}
           OCTOPUS_CLI_API_KEY: ${{ secrets.INTEGRATIONS_API_KEY }}
-        with:
-          command: push --space "Integrations" --package OctoTFS.vsix.$OCTOPUS_VERSION.tar.gz --overwrite-mode OverwriteExisting
+        run: |
+          docker run -v $(pwd):/src octopusdeploy/octo push --space "Integrations" --package OctoTFS.vsix.$OCTOPUS_VERSION.tar.gz --overwrite-mode OverwriteExisting
       - name: Create Release
-        uses: burtonr/octopus-cli-action@7.4.4
         env:
           OCTOPUS_CLI_SERVER: ${{ secrets.OCTOPUS_URL }}
           OCTOPUS_CLI_API_KEY: ${{ secrets.INTEGRATIONS_API_KEY }}
-        with:
-          command: create-release --space "Integrations" --project "Azure DevOps Extension" --package $OCTOPUS_VERSION
+        run: |
+          docker run -v $(pwd):/src octopusdeploy/octo create-release --space "Integrations" --project "Azure DevOps Extension" --package $OCTOPUS_VERSION
 
