--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,9 @@ jobs:
         run: |
           npm install
           npm run build -- --extensionVersion $OCTOPUS_VERSION
+      - name: Embed octo portable
+        run: |
+          pwsh ./embed-octo.ps1
       - name: Replace versions in tasks and create vsix
         run: |
           pwsh ./pack.ps1 -environment $OCTOPUS_ENVIRONMENT -version $OCTOPUS_VERSION
