Publish both extensions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,10 +34,12 @@ jobs:
           pwsh ./embed-octo.ps1
       - name: Replace versions in tasks and create vsix
         run: |
-          pwsh ./pack.ps1 -environment $OCTOPUS_ENVIRONMENT -version $OCTOPUS_VERSION
+          ./pack.ps1 -environment Production -version $OCTOPUS_VERSION -setupTaskDependencies
+          ./pack.ps1 -environment Test -version $OCTOPUS_VERSION
+        shell: pwsh
       - name: Create Packages
         run: |
-          tar -czf OctoTFS.vsix.$OCTOPUS_VERSION.tar.gz ./dist/Artifacts/$OCTOPUS_ENVIRONMENT/*.vsix
+          tar -czf OctoTFS.vsix.$OCTOPUS_VERSION.tar.gz ./dist/Artifacts/**/*.vsix
           tar -czf OctoTFS.publish.$OCTOPUS_VERSION.tar.gz ./publish.ps1 ./dist/extension-manifest*.json
       - name: Push Package
         run: |
