Adding v5 install task

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           npm install
           npm run build -- --extensionVersion $OCTOPUS_VERSION
+          npm run test
       - name: Embed octo portable
         run: |
           pwsh ./embed-octo.ps1
