--- a/package.json
+++ b/package.json
@@ -1,45 +1,51 @@
 {
-    "private": true,
-    "scripts": {
-        "test": "jest --maxWorkers=4 --config=jest.config.js --ci --reporters=default --reporters=jest-junit",
-        "build": "tsc --noEmit && node esbuild.mjs",
-        "lint:fix": "eslint . --fix",
-        "lint": "eslint ."
-    },
-    "devDependencies": {
-        "@tsconfig/node10": "^1.0.8",
-        "@types/glob": "7.2.0",
-        "@types/jest": "24.0.15",
-        "@types/node": "^6.0.111",
-        "@types/ramda": "0.27.64",
-        "@types/uuid": "8.3.4",
-        "@types/yargs": "^17.0.9",
-        "@typescript-eslint/eslint-plugin": "^5.13.0",
-        "@typescript-eslint/parser": "^5.13.0",
-        "esbuild": "^0.14.23",
-        "esbuild-clean-plugin": "^1.0.0",
-        "esbuild-copy-static-files": "^0.1.0",
-        "esbuild-plugin-node-externals": "^0.2.0",
-        "eslint": "^8.10.0",
-        "eslint-config-prettier": "^8.4.0",
-        "eslint-plugin-prettier": "^4.0.0",
-        "jest": "24.8.0",
-        "prettier": "2.5.1",
-        "rimraf": "2.6.2",
-        "ts-jest": "24.0.2",
-        "ts-node": "^8.3.0",
-        "typescript": "^4.6.2",
-        "yargs": "^17.3.1"
-    },
-    "dependencies": {
-        "azure-devops-node-api": "11.1.1",
-        "azure-pipelines-task-lib": "3.2.0",
-        "azure-pipelines-tool-lib": "0.13.3",
-        "fp-ts": "1.19.5",
-        "glob": "7.2.0",
-        "ramda": "0.28.0",
-        "typed-rest-client": "1.8.6",
-        "uuid": "8.3.2",
-        "vss-web-extension-sdk": "5.141.0"
-    }
+  "private": true,
+  "scripts": {
+    "test": "jest",
+    "build": "tsc --noEmit && node esbuild.mjs",
+    "lint:fix": "eslint . --fix",
+    "lint": "eslint ."
+  },
+  "devDependencies": {
+    "@tsconfig/node10": "^1.0.8",
+    "@types/archiver": "^5.3.1",
+    "@types/express": "^4.17.13",
+    "@types/glob": "7.2.0",
+    "@types/jest": "27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/ramda": "0.27.64",
+    "@types/test-console": "^2.0.0",
+    "@types/uuid": "8.3.4",
+    "@types/yargs": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "archiver": "^5.3.0",
+    "esbuild": "^0.14.25",
+    "esbuild-clean-plugin": "^1.0.0",
+    "esbuild-copy-static-files": "^0.1.0",
+    "esbuild-plugin-node-externals": "^0.2.0",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "express": "^4.17.3",
+    "jest": "27.5.1",
+    "prettier": "2.5.1",
+    "rimraf": "2.6.2",
+    "test-console": "^2.0.0",
+    "ts-jest": "27.1.3",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2",
+    "yargs": "^17.3.1"
+  },
+  "dependencies": {
+    "azure-devops-node-api": "11.1.1",
+    "azure-pipelines-task-lib": "3.2.0",
+    "azure-pipelines-tool-lib": "1.1.0",
+    "fp-ts": "1.19.5",
+    "glob": "7.2.0",
+    "ramda": "0.28.0",
+    "typed-rest-client": "1.8.6",
+    "uuid": "8.3.2",
+    "vss-web-extension-sdk": "5.141.0"
+  }
 }
