--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "extends": "@tsconfig/node10/tsconfig.json",
     "compilerOptions": {
         "declaration": false,
-        "sourceMap": false,
+        "sourceMap": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noImplicitReturns": true,
