--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,12 +9,12 @@ on:
 
 jobs:
   build:
+    name: Build code
     runs-on: ubuntu-latest
     env:
       OCTOPUS_VERSION: 5.0.${{ github.run_number }}
     steps:
       - uses: actions/checkout@v2
-
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
@@ -28,6 +28,26 @@ jobs:
         run: |
           npm install
           npm run build -- --extensionVersion $OCTOPUS_VERSION
+      - uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist/
+  test:
+    name: Run test matrix
+    needs: build
+    runs-on: ${{ matrix.os }}
+    permissions:
+      id-token: write
+      contents: read
+      checks: write
+    strategy:
+      matrix:
+        os: [ windows-2022, ubuntu-20.04, macos-11 ]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Test
+        run: |
+          npm install
           npm run test
       - uses: dorny/test-reporter@v1
         if: success() || failure()
@@ -36,6 +56,16 @@ jobs:
           name: Tests report
           path: 'reports/jest-*.xml'
           reporter: jest-junit
+  package:
+    name: Package and Push artifacts to Octopus
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
+      - uses: actions/checkout@v2
       - name: Embed octo portable
         run: |
           pwsh ./embed-octo.ps1
