--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
     "singleQuote": false,
     "printWidth": 250,
     "tabWidth": 4,
-    "trailingComma": "es5"
+    "trailingComma": "es5",
+    "endOfLine": "auto"
 }
