--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,6 @@ jobs:
         with:
           node-version: '16'
           cache: 'npm'
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: '^1.17.7'
       - name: Build
         run: |
           npm install
@@ -46,6 +42,11 @@ jobs:
         os: [ windows-2022, ubuntu-20.04, macos-11 ]
     steps:
       - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          cache: 'npm'
       - name: Test
         run: |
           npm install
@@ -67,6 +68,15 @@ jobs:
           name: dist
           path: dist
       - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+          cache: 'npm'
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '^1.17.7'
       - name: Embed octo portable
         run: |
           pwsh ./embed-octo.ps1
