--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "fp-ts": "1.19.5",
     "glob": "7.2.0",
     "ramda": "0.28.0",
+    "semver": "^7.3.5",
     "typed-rest-client": "1.8.6",
     "uuid": "8.3.2",
     "vss-web-extension-sdk": "5.141.0"
